syntax = "proto3";
package oppyfinance.oppychain.vault;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "gitlab.com/oppy-finance/oppychain/x/vault/types";


  message historicalAmount{
    int64 blockHeight = 1;
    repeated cosmos.base.v1beta1.Coin amount = 2 [
      (gogoproto.nullable) = false,
      (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
    ];
  }



message coinsQuota {
    repeated historicalAmount history = 2;
    repeated cosmos.base.v1beta1.Coin CoinsSum= 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  }
